added buttons for identity creation

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Test IOTICS Identity</title>
   </head>
+  <link rel="stylesheet" href="./index.css" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"
@@ -53,7 +54,6 @@
         id="createDefaultSeedId"
         type="button"
         value="create default seed"
-        onclick="createDefaultSeedCallback();"
       />
       <span
         id="createDefaultSeedOutput"
