completed first 4 methods

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -29,7 +29,12 @@
   <body>
     <div>
       <label for="seed">Seed: </label>
-      <input id="seed" type="text" size="50" value="" />
+      <input
+        id="seed"
+        type="text"
+        size="50"
+        value="BhuaQnatq1H2xSufzVsx77QtiLsMifXZAAPqXnRDNrMH"
+      />
     </div>
     <div>
       <label for="resolverId">Resolver address: </label>
