--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -28,6 +28,11 @@
   <script src="./index.js"></script>
   <body>
     <div>
+      <label for="resolverId">Resolver address: </label>
+      <input id="resolverId" type="text" value="https://did.stg.iotics.com" />
+    </div>
+    <br />
+    <div>
       <label for="seed">Seed: </label>
       <input
         id="seed"
@@ -37,9 +42,15 @@
       />
     </div>
     <div>
-      <label for="resolverId">Resolver address: </label>
-      <input id="resolverId" type="text" value="https://did.stg.iotics.com" />
+      <label for="createDefaultSeedId">Generates a new seed: </label>
+      <input
+        id="createDefaultSeedId"
+        type="button"
+        value="create default seed"
+      />
     </div>
+    <br />
+
     <div>
       <label for="userNameId">User name: </label>
       <input id="userNameId" type="text" value="#user-0" />
@@ -49,6 +60,21 @@
       <input id="userKeyId" type="text" value="user-key-0" />
     </div>
     <div>
+      <label for="userDidId">User did: </label>
+      <input id="userDidId" size="40" type="text" value="" />
+    </div>
+    <div>
+      <label for="createUserIdentityId">Creates user identity: </label>
+      <input
+        id="createUserIdentityId"
+        type="button"
+        value="get/create user identity"
+      />
+      <input id="getUserDocId" type="button" value="get user did doc" />
+    </div>
+    <br />
+
+    <div>
       <label for="agentNameId">Agent name: </label>
       <input id="agentNameId" type="text" value="#agent-0" />
     </div>
@@ -57,63 +83,50 @@
       <input id="agentKeyId" type="text" value="agent-key-0" />
     </div>
     <div>
-      <label for="twinNameId">Agent name: </label>
-      <input id="twinNameId" type="text" value="#twin-0" />
-    </div>
-    <div>
-      <label for="twinKeyId">Agent key: </label>
-      <input id="twinKeyId" type="text" value="twin-key-0" />
-    </div>
-    <br />
-    <div>
-      <label for="createDefaultSeedId">Generates a new seed: </label>
-      <input
-        id="createDefaultSeedId"
-        type="button"
-        value="create default seed"
-      />
+      <label for="agentDidId">Agent did: </label>
+      <input id="agentDidId" size="40" type="text" value="" />
     </div>
     <div>
       <label for="createAgentIdentityId">Creates agent identity: </label>
       <input
         id="createAgentIdentityId"
         type="button"
-        value="create agent identity"
+        value="get/create agent identity"
       />
-      <span
-        id="createAgentIdentityOutput"
-        class="font-family:garamond,serif"
-      ></span>
+      <input id="getAgentDocId" type="button" value="get agent did doc" />
     </div>
-
+    <br />
     <div>
-      <label for="createUserIdentityId">Creates user identity: </label>
-      <input
-        id="createUserIdentityId"
-        type="button"
-        value="create user identity"
-      />
-      <span
-        id="createUserIdentityOutput"
-        class="font-family:garamond,serif"
-      ></span>
+      <label for="twinNameId">Twin name: </label>
+      <input id="twinNameId" type="text" value="#twin-0" />
     </div>
-
+    <div>
+      <label for="twinKeyId">Twin key: </label>
+      <input id="twinKeyId" type="text" value="twin-key-0" />
+    </div>
+    <div>
+      <label for="twinDidId">Twin did: </label>
+      <input id="twinDidId" size="40" type="text" value="" />
+    </div>
     <div>
       <label for="createTwinIdentityId">Creates twin identity: </label>
       <input
         id="createTwinIdentityId"
         type="button"
-        value="create twin identity"
+        value="get/create twin identity"
       />
-      <span
-        id="createTwinIdentityOutput"
-        class="font-family:garamond,serif"
-      ></span>
+      <input id="getTwinDocId" type="button" value="get twin did doc" />
     </div>
     <br />
+    <div>
+      <label for="delegateControlId">Delegate control: </label>
+      <input id="delegateControlId" type="button" value="delegate control" />
+    </div>
+    <br />
+    <hr />
+    <br />
     <div id="output">
-      <span id="output-text"></span>
+      <pre id="output-text"></pre>
     </div>
   </body>
 </html>
