--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -126,7 +126,12 @@
           </div>
           <br />
           <div>
-            <label for="delegateControlId">Delegate control: </label>
+            <label for="controlDelegationName">control delegation name: </label>
+            <input
+              id="controlDelegationName"
+              type="text"
+              value="#controlDelegation_1"
+            />
             <input
               id="delegateControlId"
               type="button"
