added auth delegation

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -126,6 +126,22 @@
           </div>
           <br />
           <div>
+            <label for="authenticationDelegationName"
+              >auth delegation name:
+            </label>
+            <input
+              id="authenticationDelegationName"
+              type="text"
+              value="#authDelegation_1"
+            />
+            <input
+              id="delegateAuthenticationId"
+              type="button"
+              value="delegate authentication"
+            />
+          </div>
+          <br />
+          <div>
             <label for="controlDelegationName">control delegation name: </label>
             <input
               id="controlDelegationName"
