--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -174,6 +174,19 @@
               value="create agent auth token"
             />
           </div>
+          <br />
+          <div>
+            <label for="cacheTtl">cacheTtl (sec): </label>
+            <input id="cacheTtl" type="text" value="10" />
+            <br />
+            <label for="cacheSize">cacheSize: </label>
+            <input id="cacheSize" type="text" value="128" />
+            <input
+              id="setIdentitiesCacheConfigId"
+              type="button"
+              value="set cache config"
+            />
+          </div>
         </div>
         <div
           style="
