added separate entrypoints for the sake of keeping the same entrypoint name

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -39,7 +39,7 @@
     referrerpolicy="no-referrer"
   ></script>
 
-  <script src="./ioticsIdentityBrowser.js"></script>
+  <script src="./ioticsIdentity.js"></script>
 
   <script src="./index.js"></script>
   <body>
