--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -18,26 +18,6 @@
     <title>Test IOTICS Identity</title>
   </head>
   <link rel="stylesheet" href="./index.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"
-    integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
-    integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
-
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
-    integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
 
   <script src="./ioticsIdentity.js"></script>
 
@@ -87,7 +67,7 @@
             <input id="userDidId" size="40" type="text" value="" />
           </div>
           <div>
-            <label for="createUserIdentityId">Creates user identity: </label>
+            <label for="createUserIdentityId">For user identity: </label>
             <input
               id="createUserIdentityId"
               type="button"
@@ -110,7 +90,7 @@
             <input id="agentDidId" size="40" type="text" value="" />
           </div>
           <div>
-            <label for="createAgentIdentityId">Creates agent identity: </label>
+            <label for="createAgentIdentityId">For agent identity: </label>
             <input
               id="createAgentIdentityId"
               type="button"
